[REFACTOR]: createPost 메소드 if문 조건 변경으로 구조 수정